# pdf-bot-v1

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
changelog/: changelog1.md  fix-code-cleanup-v1.md  parsing.md
scripts/: setup-hooks.sh
scripts/hooks/: post-checkout
spec/: SPEC.md  architecture.md  requirements.md  test-plan.md
tests/: __init__.py  conftest.py  test_auth.py  test_cli.py  test_config.py  test_exceptions.py  test_name_extractor.py  test_pdf_builder.py  test_scraper.py  test_summarizer.py
topdf/: __init__.py  auth.py  cli.py  config.py  converter.py  exceptions.py  name_extractor.py  pdf_builder.py  scraper.py  summarizer.py
